--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <!-- App Scripts -->
     <script src="js/config.js"></script>
-    <script src="js/questions.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/questions-config.js"></script>
+    <script src="js/app-new.js"></script>
 </body>
 </html>
